statistics and recently viewed styles

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
 
     <nav>
-      <h2>Filter Employees</h2>
+      <h2 class="text-color-green">Filter Employees</h2>
       <form id="filter-form">
         <div class="filter-group">
           <label for="status-filter">Status:</label>
@@ -47,7 +47,7 @@
 
     <main>
       <section class="results-section">
-        <h2>Employees List</h2>
+        <h2 class="text-color-green">Employees List</h2>
         <p id="result-count" aria-live="polite">Results: 0</p>
 
         <div
@@ -89,23 +89,23 @@
     </main>
 
     <aside>
-      <h2>Statistics</h2>
+      <h2 class="text-color-red">Statistics</h2>
       <div class="stats">
         <div class="stat-item">
-          <strong>Total:</strong>
+          <strong class="text-color-green">Total:</strong>
           <span id="total-count">0</span>
         </div>
         <div class="stat-item">
-          <strong>Nice:</strong>
+          <strong class="text-color-green">Nice:</strong>
           <span id="positive-count">0</span>
         </div>
         <div class="stat-item">
-          <strong>Naughty:</strong>
+          <strong class="text-color-green">Naughty:</strong>
           <span id="negative-count">0</span>
         </div>
       </div>
 
-      <h3>Recently Viewed</h3>
+      <h3 class="text-color-red">Recently Viewed</h3>
       <ul id="recent-employees" class="recent-employees-list"></ul>
     </aside>
 
