pagination styles and employee list styles

--- a/index.html
+++ b/index.html
@@ -56,11 +56,21 @@
           role="navigation"
           aria-label="Pagination"
         >
-          <button id="prev-page-top" aria-label="Previous page" type="button">
+          <button
+            id="prev-page-top"
+            aria-label="Previous page"
+            type="button"
+            class="btn-primary"
+          >
             Previous
           </button>
           <span id="page-info-top" aria-live="polite">Page 1 of 1</span>
-          <button id="next-page-top" aria-label="Next page" type="button">
+          <button
+            id="next-page-top"
+            aria-label="Next page"
+            type="button"
+            class="btn-primary"
+          >
             Next
           </button>
         </div>
@@ -77,11 +87,17 @@
             id="prev-page-bottom"
             aria-label="Previous page"
             type="button"
+            class="btn-primary"
           >
             Previous
           </button>
           <span id="page-info-bottom" aria-live="polite">Page 1 of 1</span>
-          <button id="next-page-bottom" aria-label="Next page" type="button">
+          <button
+            id="next-page-bottom"
+            aria-label="Next page"
+            type="button"
+            class="btn-primary"
+          >
             Next
           </button>
         </div>
