added edit and delete employee functionality

--- a/index.html
+++ b/index.html
@@ -16,14 +16,16 @@
 
     <nav>
       <h2 class="text-color-green">Filter Employees</h2>
-      <form id="filter-form">
+      <form id="filter-form" class="filter-form-container">
         <div class="filter-group">
           <label for="status-filter">Status:</label>
-          <select id="status-filter" name="status">
-            <option value="">All employees</option>
-            <option value="positive">Nice employees</option>
-            <option value="negative">Naughty employees</option>
-          </select>
+          <div class="select-wrapper">
+            <select id="status-filter" name="status">
+              <option value="">All employees</option>
+              <option value="positive">Nice employees</option>
+              <option value="negative">Naughty employees</option>
+            </select>
+          </div>
         </div>
 
         <div class="filter-group">
